--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "joagger": "^0.1.2"
+    "joagger": "^0.1.2",
+    "rexpress": "^0.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.11.18",
+    "tsc-watch": "^6.0.0"
   }
 }
