--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "test.js",
   "scripts": {
+    "start-dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "joagger": "^0.1.2",
     "rexpress": "^0.2.0"
   },
