--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "joagger": "^0.1.2",
+    "mongo": "^0.1.0",
     "rexpress": "^0.2.0"
   },
   "devDependencies": {
